client/src/Pages/OrganizerPublic/OrganizerPublicLayout.module.css
.wrapper {
  min-height: calc(100vh - 60px);
  display: grid;
  grid-template-columns: 1fr 350px;
  grid-template-rows: auto auto;
  align-items: start;
  gap: 25px;
}
.spacer__header {
  margin-bottom: 10px;
}
.box__navbar {
  margin: 10px 0 15px;
}

/* ====================================================================== */
@media (max-width: 1200px) {
  .wrapper {
    grid-template-columns: 100%;
  }
}

